# AudioRecorder

./: build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: mp3codec.cpp
app/src/main/java/com/dimowner/audiorecorder/: ARApplication.kt  AppConstants.java  Injector.java
app/src/main/java/com/dimowner/audiorecorder/app/: AppRecorder.java  AppRecorderImpl.java  DownloadService.java  RecordingService.java
app/src/main/java/com/dimowner/audiorecorder/data/: FileRepositoryImpl.java  Prefs.java  PrefsImpl.java
app/src/main/java/com/dimowner/audiorecorder/util/: AndroidUtils.java
app/src/main/java/com/ptdstudio/internalsoundrecorder/: InAppPurchased.java  PCMToMp3Encoder.java
app/src/main/java/com/ptdstudio/internalsoundrecorder/appopenad/: AppOpenHelper.java  OnShowAdCompleteListener.java
app/src/main/java/com/ptdstudio/internalsoundrecorder/audio/: Mp3Utils.java
app/src/main/res/drawable/: baseline_loyalty_white_24dp.xml  baseline_privacy_tip_white_24dp.xml  baseline_rate_review_white_24dp.xml
app/src/main/res/layout/: activity_main.xml  activity_main2.xml  activity_settings.xml  activity_setup.xml  activity_splash.xml  inapppurchased_layout.xml
app/src/main/res/mipmap-anydpi-v26/: audio_recorder_logo.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/main/res/values-bg/: strings.xml
app/src/main/res/values-ca/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-tr/: strings.xml
app/src/main/res/values-uk/: strings.xml
app/src/main/res/values-v35/: styles.xml
app/src/main/res/values-vi/: strings.xml
app/src/main/res/values-zh/: strings.xml
recorder-audio/: CMakeLists.txt  build.gradle
recorder-audio/src/main/java/com/chezi/recorder/: Mp3Recorder.java  PCMFormat.java
(+19 files in other folders)
